Fixed the Alignment of Send Now Button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,7 +391,7 @@ background-size: cover;
   background-color: var(--old-rose);
   color: var(--white);
   border-radius: var(--radius-5);
-  margin-left: 325px;
+  margin-left: 180px;
   margin-top: 30px;
   text-align: center;
 }
